2014-03-01 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.2.1 (libshogun 16.1, data 0.8, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features:
		- None
	* Bugfixes:
		- None
	* Cleanup and API Changes:
		- None

2014-02-17 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.2.0 (libshogun 16.0, data 0.8, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features:
		- Fully support python3 now
		- Add mini-batch k-means [Parijat Mazumdar]
		- Add k-means++ [Parijat Mazumdar]
		- Add sub-sequence string kernel [lambday]
	* Bugfixes:
		- Compile fixes for upcoming swig3.0
		- Speedup for gaussian process' apply()
		- Improve unit / integration test checks
		- libbmrm uninitialized memory reads
		- libocas uninitialized memory reads
		- Octave 3.8 compile fixes [Orion Poplawski]
		- Fix java modular compile error [Bjoern Esser]
	* Cleanup and API Changes:
		- None

2014-01-06 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.1.1 (libshogun 15.1, data 0.7, parameter 1)
	* This is a bugfix release:
	* Bugfixes:
		- Fix compile error occurring with CXX0X
		- Bump data version to required version

2014-01-05 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 3.1.0 (libshogun 15.0, data 0.6, parameter 1)
	* This release also contains several cleanups and bugfixes:
	* Features:
		- Add option to set k-means cluster centers [Parijat Mazumdar]
		- Add leave one out crossvalidation scheme [Saurabh Mahindre]
		- Add multiclass ipython notebook tutorials [Chiyuan Zhang]
		- Add learning of StreamingSparseFeatures in OnlineLibLinear [Thoralf Klein]
	* Bugfixes:
		- Decrease memory footprint of SGObject
		- Fix protobuf detection
		- Fix doxygen files and various doxygen errors
		- Fix compile error with directors
		- Fix memory leak in modular interfaces and apply*()
		- Fix leak in KNN::store_model_features
		- Notebook fixes