@@ -5,7 +5,8 @@
 	* Features:
 		- None
 	* Bugfixes:
-		- None
+		- Fix PCA::apply_to_feature_matrix [Parijat Mazumdar]
+		- Fix LeastAngleRegression for the case D greater than N [Parijat Mazumdar]
 	* Cleanup and API Changes:
 		- None
 
